# zombie-game

./: .gitmodules  CMakeLists.txt  LICENSE.md  character.cpp  character.h  color.cpp  color.h  console.cpp  console.h  drawmanager.cpp  drawmanager.h  entity.cpp  entity.h  game.cpp  game.h  globals.h  inputmanager.cpp  inputmanager.h  item.cpp  item.h  key.h  logger.cpp  logger.h  main.cpp  main.h  ncurseswrapper.cpp  ncurseswrapper.h  player.cpp  player.h  position.cpp  position.h  renderer.cpp  renderer.h  sdlmanager.cpp  sdlmanager.h  window.cpp  window.h  world.cpp  world.h  zombie.cpp  (+1 more)
cmake/: FindSDL2.cmake
entities/: bullet.cpp  bullet.h  character.cpp  character.h  entity.cpp  entity.h  entityfactory.cpp  entityfactory.h  item.cpp  item.h  player.cpp  player.h  projectile.cpp  projectile.h  zombie.cpp  zombie.h
